# TensorVis

./: CMakeLists.txt  tensormeshengine.cpp  tensormeshengine.h  tensorvis.cpp  tensorvis.h
ui/: tensorviswidget.cpp  tensorviswidget.h  tensorviswidget.ui
